--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 				<div class="banner"><img src="IMG/banner.png" alt="banner"></div>
 				<div class="catalog__catalog-section flex">
 					<h2>Для отделки стен и фасадов</h2>
-					<a href=""><div class="catalog__catalog-section__item flex">
+					<a href="single.html"><div class="catalog__catalog-section__item flex">
 							<img src="IMG/item.png" alt="item">
 							<p>Евровагонка из сосны</p>
 							<span>От 170 руб./м2</span>
