--- a/single.html
+++ b/single.html
@@ -6,6 +6,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="Styles/ProximaNova/stylesheet.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+	<link rel="stylesheet" href="Js/fancybox/jquery.fancybox.min.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
@@ -165,9 +166,9 @@
 				<h1>Евровагонка</h1>
 				<div class="single__media flex">
 					<div class="single__media__images flex">
-						<img src="IMG/single_1.png" alt="">
-						<img src="IMG/single_2.png" alt="">
-						<img src="IMG/single_3.png" alt="">
+						<a data-fancybox="images" href="IMG/single_1.png"><img src="IMG/single_1.png" alt=""></a>
+						<a data-fancybox="images" href="IMG/single_2.png"><img src="IMG/single_2.png" alt=""></a>
+						<a data-fancybox="images" href="IMG/single_3.png"><img src="IMG/single_3.png" alt=""></a>
 					</div>
 					<div class="single__media__table tabs" id="wr-tabs">
 						    <div class="tabs__header tabs">
@@ -449,6 +450,7 @@
 		</div>
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="Js/fancybox/jquery.fancybox.min.js"></script>
 	<script src="Js/script.js"></script>
 </body>
 </html>
