--- a/single.html
+++ b/single.html
@@ -39,7 +39,7 @@
 						<div class="header__bottom__contacts__phone"><a href="tel:84953203999">+7 495 320-39-99</a></div>
 						<div class="header__bottom__contacts__time">Часы работы:  9:00 - 19:00</div>
 					</div>
-					<a class="header__bottom__callback flex va-center">Заказать звонок</a>
+					<a href="#feedback" rel="nofollow" class="header__bottom__callback flex va-center modalbox">Заказать звонок</a>
 				</div>
 			</div>
 		</div>
@@ -431,26 +431,60 @@
 		</div>
 	</div>
 	<footer>
-		<div class="container-main flex m-auto">
-			<div class="footer__policy">&copy; 2018 &laquo;ДеревоМаркет&raquo;. Все права защищены <br>Россия, г. Москва, пос. Рублево, 61 км. МКАД</div>
-			<div class="footer__menu">
-				<ul class="flex">
-					<li><a href="">Главная</a></li>
-					<li><a href="">Наши цены</a></li>
-					<li><a href="">Контакты</a></li>
-				</ul>
+		<div class="footer_desktop">
+			<div class="container-main flex m-auto">
+				<div class="footer__policy">&copy; 2018 &laquo;ДеревоМаркет&raquo;. Все права защищены <br>Россия, г. Москва, пос. Рублево, 61 км. МКАД</div>
+				<div class="footer__menu">
+					<ul class="flex">
+						<li><a href="">Главная</a></li>
+						<li><a href="">Наши цены</a></li>
+						<li><a href="">Контакты</a></li>
+					</ul>
+				</div>
+				<div class="footer__contacts">
+					<ul class="flex">
+						<li>Часы работы: 9:00-19:00</li>
+						<li><span><a href="tel:+74953203999">+7 495 320-39-99</a></span></li>
+						<li><a href="mailto:info-domvest@yandex.ru">info-domvest@yandex.ru</a></li>
+					</ul>
+				</div>
 			</div>
-			<div class="footer__contacts">
-				<ul class="flex">
-					<li>Часы работы: 9:00-19:00</li>
-					<li><span><a href="tel:+74953203999">+7 495 320-39-99</a></span></li>
-					<li><a href="mailto:info-domvest@yandex.ru">info-domvest@yandex.ru</a></li>
-				</ul>
+		</div>
+		<div class="footer_mobile">
+			<div class="container-main flex m-auto">
+				<div class="footer__policy">&copy; 2018 &laquo;ДеревоМаркет&raquo;. Все права защищены <br>Россия, г. Москва, пос. Рублево, 61 км. МКАД</div>
+				<div class="footer__menu">
+					<ul class="flex">
+						<li><a href="">Главная</a></li>
+						<li><a href="">Наши цены</a></li>
+						<li><a href="">Контакты</a></li>
+					</ul>
+				</div>
+				<div class="footer__contacts">
+					<ul class="flex">
+						<li>Часы работы: 9:00-19:00</li>
+						<li><span><a href="tel:+74953203999">+7 495 320-39-99</a></span></li>
+						<li><a href="mailto:info-domvest@yandex.ru">info-domvest@yandex.ru</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</footer>
+	<div id="feedback"><!-- hidden inline form -->
+	    <h2>Заказать звонок</h2>
+	    <form id="f_contact" name="contact" action="#" method="post">
+	        <label for="f_name">Ваше имя</label><br>
+	        <input type="text" id="f_name" name="f_name"><br>
+	        <label for="f_phone">Ваш телефон</label><br>
+	        <input type="text" id="phone" name="f_phone"><br>
+	        <!-- <label for="f_msg">Введите сообщение</label><br>
+	        <textarea id="f_msg" name="f_msg" class="txtarea"></textarea> -->
+	        <button id="f_send" class="header__bottom__callback flex">Оставить заявку</button>
+	    </form>
+	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="Js/fancybox/jquery.fancybox.min.js"></script>
+	<script src="Js/jquery.maskedinput.min.js"></script>
 	<script src="Js/script.js"></script>
 </body>
 </html>
