--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<div class="header__bottom__contacts__phone"><a href="tel:84953203999">+7 495 320-39-99</a></div>
 						<div class="header__bottom__contacts__time">Часы работы:  9:00 - 19:00</div>
 					</div>
-					<a class="header__bottom__callback flex va-center">Заказать звонок</a>
+					<a href="#feedback" rel="nofollow" class="header__bottom__callback flex va-center modalbox">Заказать звонок</a>
 				</div>
 			</div>
 		</div>
