--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="Styles/ProximaNova/stylesheet.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+	<link rel="stylesheet" href="Js/fancybox/jquery.fancybox.min.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
@@ -351,6 +352,7 @@
 	    </form>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="Js/fancybox/jquery.fancybox.min.js"></script>
 	<script src="Js/jquery.maskedinput.min.js"></script>
 	<script src="Js/script.js"></script>
 </body>
