--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				<div class="banner"><img src="IMG/banner.png" alt="banner"></div>
 				<div class="catalog__catalog-section flex">
 					<h2>Для отделки стен и фасадов</h2>
-					<a href=""><div class="catalog__catalog-section__item flex">
+					<a href="single.html"><div class="catalog__catalog-section__item flex">
 							<img src="IMG/item.png" alt="item">
 							<p>Евровагонка из сосны</p>
 							<span>От 170 руб./м2</span>
@@ -344,7 +344,7 @@
 	    <form id="f_contact" name="contact" action="#" method="post">
 	        <label for="f_name">Ваше имя</label><br>
 	        <input type="text" id="f_name" name="f_name"><br>
-	        <label for="f_phone">Ваш телефон</label><br>
+	        <label for="phone">Ваш телефон</label><br>
 	        <input type="text" id="phone" name="f_phone"><br>
 	        <!-- <label for="f_msg">Введите сообщение</label><br>
 	        <textarea id="f_msg" name="f_msg" class="txtarea"></textarea> -->
