--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				<div class="banner"><img src="IMG/banner.png" alt="banner"></div>
 				<div class="catalog__catalog-section flex">
 					<h2>Для отделки стен и фасадов</h2>
-					<a href="single.html"><div class="catalog__catalog-section__item flex">
+					<a href=""><div class="catalog__catalog-section__item flex">
 							<img src="IMG/item.png" alt="item">
 							<p>Евровагонка из сосны</p>
 							<span>От 170 руб./м2</span>
@@ -320,23 +320,26 @@
 			</div>
 		</div>
 		<div class="footer_mobile">
-			<div class="container-main flex m-auto">
-				<div class="footer__policy">&copy; 2018 &laquo;ДеревоМаркет&raquo;. Все права защищены <br>Россия, г. Москва, пос. Рублево, 61 км. МКАД</div>
-				<div class="footer__menu">
-					<ul class="flex">
-						<li><a href="">Главная</a></li>
-						<li><a href="">Наши цены</a></li>
-						<li><a href="">Контакты</a></li>
-					</ul>
-				</div>
-				<div class="footer__contacts">
-					<ul class="flex">
-						<li>Часы работы: 9:00-19:00</li>
-						<li><span><a href="tel:+74953203999">+7 495 320-39-99</a></span></li>
-						<li><a href="mailto:info-domvest@yandex.ru">info-domvest@yandex.ru</a></li>
-					</ul>
+			<div class="footer_mobile__top">
+				<div class="container-main flex m-auto">
+					<div class="footer__menu">
+						<ul class="flex">
+							<li><a href="">Главная</a></li>
+							<li><a href="">Наши цены</a></li>
+							<li><a href="">Контакты</a></li>
+						</ul>
+					</div>
+					<div class="footer__policy">Россия, г. Москва, <br> пос. Рублево, 61 км. МКАД</div>
+					<div class="footer__contacts">
+						<ul class="flex">
+							<li>Часы работы: 9:00-19:00</li>
+							<li><span><a href="tel:+74953203999">+7 495 320-39-99</a></span></li>
+							<li><a href="mailto:info-domvest@yandex.ru">info-domvest@yandex.ru</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
+			<div class="footer_mobile__bottom">&copy; 2018 &laquo;ДеревоМаркет&raquo;. Все права защищены </div>
 		</div>
 	</footer>
 	<div id="feedback"><!-- hidden inline form -->
