--- a/single.html
+++ b/single.html
@@ -451,23 +451,26 @@
 			</div>
 		</div>
 		<div class="footer_mobile">
-			<div class="container-main flex m-auto">
-				<div class="footer__policy">&copy; 2018 &laquo;ДеревоМаркет&raquo;. Все права защищены <br>Россия, г. Москва, пос. Рублево, 61 км. МКАД</div>
-				<div class="footer__menu">
-					<ul class="flex">
-						<li><a href="">Главная</a></li>
-						<li><a href="">Наши цены</a></li>
-						<li><a href="">Контакты</a></li>
-					</ul>
-				</div>
-				<div class="footer__contacts">
-					<ul class="flex">
-						<li>Часы работы: 9:00-19:00</li>
-						<li><span><a href="tel:+74953203999">+7 495 320-39-99</a></span></li>
-						<li><a href="mailto:info-domvest@yandex.ru">info-domvest@yandex.ru</a></li>
-					</ul>
+			<div class="footer_mobile__top">
+				<div class="container-main flex m-auto">
+					<div class="footer__menu">
+						<ul class="flex">
+							<li><a href="">Главная</a></li>
+							<li><a href="">Наши цены</a></li>
+							<li><a href="">Контакты</a></li>
+						</ul>
+					</div>
+					<div class="footer__policy">Россия, г. Москва, <br> пос. Рублево, 61 км. МКАД</div>
+					<div class="footer__contacts">
+						<ul class="flex">
+							<li>Часы работы: 9:00-19:00</li>
+							<li><span><a href="tel:+74953203999">+7 495 320-39-99</a></span></li>
+							<li><a href="mailto:info-domvest@yandex.ru">info-domvest@yandex.ru</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
+			<div class="footer_mobile__bottom">&copy; 2018 &laquo;ДеревоМаркет&raquo;. Все права защищены </div>
 		</div>
 	</footer>
 	<div id="feedback"><!-- hidden inline form -->
@@ -475,7 +478,7 @@
 	    <form id="f_contact" name="contact" action="#" method="post">
 	        <label for="f_name">Ваше имя</label><br>
 	        <input type="text" id="f_name" name="f_name"><br>
-	        <label for="f_phone">Ваш телефон</label><br>
+	        <label for="phone">Ваш телефон</label><br>
 	        <input type="text" id="phone" name="f_phone"><br>
 	        <!-- <label for="f_msg">Введите сообщение</label><br>
 	        <textarea id="f_msg" name="f_msg" class="txtarea"></textarea> -->
