--- a/single.html
+++ b/single.html
@@ -12,9 +12,9 @@
 <body>
 	<header>
 		<div class="header__top flex">
-			<div class="container-main flex">
+			<div class="container_main flex">
 				<div class="header__top__logo"><img src="IMG/logo.png" alt=""></div>
-				<div class="container-content flex">
+				<div class="container_content flex">
 					<div class="header__top__menu va-center flex">
 						<ul class="flex">
 							<li><a href=""><i class="fas fa-shipping-fast"></i>&nbsp;&nbsp;<span>Доставка и оплата</span></a></li>
@@ -29,8 +29,8 @@
 			</div>
 		</div>
 		<div class="header__bottom flex">
-			<div class="container-main flex  jc-fEnd">
-				<div class="container-content flex va-center">
+			<div class="container_main flex  jc-fEnd">
+				<div class="container_content flex va-center">
 					<div class="menu-trigger">
 						<i class="fa fa-bars"></i>
 					</div>
@@ -44,7 +44,7 @@
 			</div>
 		</div>
 	</header>
-	<div class="container-main flex m-auto">
+	<div class="container_main flex m-auto">
 		<div class="sidebar">
 			<ul id="accordion" class="accordion">
 			  <li>
@@ -161,7 +161,7 @@
 			  </li>
 			</ul>
 		</div>
-		<div class="container-content w100 flex">
+		<div class="container_content w100 flex">
 			<div class="catalog single">
 				<h1>Евровагонка</h1>
 				<div class="single__media flex">
@@ -432,7 +432,7 @@
 	</div>
 	<footer>
 		<div class="footer_desktop">
-			<div class="container-main flex m-auto">
+			<div class="container_main flex m-auto">
 				<div class="footer__policy">&copy; 2018 &laquo;ДеревоМаркет&raquo;. Все права защищены <br>Россия, г. Москва, пос. Рублево, 61 км. МКАД</div>
 				<div class="footer__menu">
 					<ul class="flex">
@@ -452,7 +452,7 @@
 		</div>
 		<div class="footer_mobile">
 			<div class="footer_mobile__top">
-				<div class="container-main flex m-auto">
+				<div class="container_main flex m-auto">
 					<div class="footer__menu">
 						<ul class="flex">
 							<li><a href="">Главная</a></li>
@@ -470,7 +470,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="footer_mobile__bottom">&copy; 2018 &laquo;ДеревоМаркет&raquo;. Все права защищены </div>
+			<div class="footer_mobile__bottom flex">&copy; 2018 &laquo;ДеревоМаркет&raquo;. Все права защищены </div>
 		</div>
 	</footer>
 	<div id="feedback"><!-- hidden inline form -->
