--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 	<div class="container_main flex m-auto">
 		<div class="sidebar">
 			<ul id="accordion" class="accordion">
+		      <li>
+		      	<div class="link flex"><i class="fas fa-times menu-close"></i></div>
+		      </li>	
 			  <li>
 			    <div class="link">Сосна/Ель<i class="fa fa-chevron-down"></i></div>
 			    <ul class="submenu">
