--- a/index.html
+++ b/index.html
@@ -169,135 +169,144 @@
 				<div class="banner"><img src="IMG/banner.png" alt="banner"></div>
 				<div class="catalog__catalog-section flex">
 					<h2>Для отделки стен и фасадов</h2>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
+					<div class="catalog__catalog-section__items">
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+					</div>
 				</div>
 				<div class="catalog__catalog-section flex">
 					<h2>Для отделки стен и фасадов</h2>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
+					<div class="catalog__catalog-section__items">
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+					</div>
 				</div>
 				<div class="catalog__catalog-section flex">
 					<h2>Для отделки стен и фасадов</h2>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
+					<div class="catalog__catalog-section__items">
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+					</div>
 				</div>
 				<div class="catalog__catalog-section flex">
 					<h2>Для отделки стен и фасадов</h2>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
-					<a href=""><div class="catalog__catalog-section__item flex">
-							<img src="IMG/item.png" alt="item">
-							<p>Евровагонка из сосны</p>
-							<span>От 170 руб./м2</span>
-						</div>
-					</a>
+					<div class="catalog__catalog-section__items">
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+						<a href=""><div class="catalog__catalog-section__items__item flex">
+								<img src="IMG/item.png" alt="item">
+								<p>Евровагонка из сосны</p>
+								<span>От 170 руб./м2</span>
+							</div>
+						</a>
+					</div>
+				</div>
 				</div>
 			</div>
 		</div>
